feat: update reademe

--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Devklucas">
     <title>Super Mario</title>
-    <link rel="icon" type="image/png" href="./assests/super-mario.png"/>
-    <link rel="stylesheet" href="./animation.css" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" type="image/png" href="./assets/img/super-mario.png"/>
+    <link rel="stylesheet" href="./assets/css/animation.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <div class="scenery">
       <div class="counter"></div>  
-      <img src="./assests/clouds.png" alt="clouds" class="clouds" />
-      <img src="./assests/pipe.png" alt="pipe" class="pipe" />
-      <img src="./assests/mario.gif" alt="mario" class="mario" />
+      <img src="./assets/img/clouds.png" alt="clouds" class="clouds" />
+      <img src="./assets/img/sun.png" alt="sun" class="sun" />
+      <img src="./assets/img/pipe.png" alt="pipe" class="pipe" />
+      <img src="./assets/img/mario.gif" alt="mario" class="mario" />
       <div class="grass"></div>
       <section class="modal invisible">
         <h2>Perdeu!</h2>
@@ -23,7 +24,8 @@
         <button class="btnReload">Reiniciar</button>
       </section>
     </div>
-    <script src="./Selectors.js"></script>
-    <script src="./index.js"></script>
+    <script src="./assets/js/listener.js"></script>
+    <script src="./assets/js/selectors.js"></script>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
